fix json, delete widget for git push

--- a/(phase1)_Portfolio_Optimization_Code.ipynb
+++ b/(phase1)_Portfolio_Optimization_Code.ipynb
@@ -45,7 +45,9 @@
         "ampl = ampl_notebook(\n",
         "    modules=[\"gurobi\"],  # modules to install\n",
         "    license_uuid=\"your-license-uuid\",  # license to use\n",
-        ")  # instantiate AMPL object and register magics"
+        ")  # instantiate AMPL object and register magics\n",
+        "\n",
+        "#After running this cell, enter this when prompted: license_uuid=\"46fa0cd4-c02d-437c-8da5-7bb4124f8e6f\"."
       ]
     },
     {
